Fix styling bug with scene list icons not aligning

--- a/src/app/components/results-menu/scenes-list/scenes-list.component.scss
+++ b/src/app/components/results-menu/scenes-list/scenes-list.component.scss
@@ -25,7 +25,6 @@
 }
 
 .mobile-size .scene-controls {
-  font-size: 12px;
   line-height: 28px;
 }
 
@@ -93,15 +92,6 @@
 }
 
 .number-queued {
-  margin-left: 10px;
-}
-
-.mobile-size .material-icons {
-  font-size: 14px;
-}
-
-.mobile-size .icon-margin.mobile-svg {
-  height: 14px;
   margin-left: 10px;
 }
 
